# vidiot

./: CMakeLists.txt  CMakeLists.txt.bak  Copyright.txt  Doxyfile.txt  FindFFMPEG.cmake  FindPortAudio.cmake  HOWTO-linux.txt  HOWTO-windows.txt  HOWTO.txt  Readme.txt  RunCMake.bat  build-wxwin.bat
install/: CMakeLists.txt  Copyright.txt  Readme.txt
install/linux/: postinst  postrm  vidiot.desktop  vidiot.xml
main/: CMakeLists.txt  Main.cpp
main/src/: Main.cpp
test/: CMakeLists.txt  filetypes_formats.txt
test/auto/: CMakeLists.txt
test/auto/include/: TestAuto.h  TestAutoFolder.h  TestBugs.h  TestComposition.h  TestConvert.h  TestDetailsClip.h  TestDialog.h  TestDragAndDrop.h  TestExceptions.h  TestFileTypes.h  TestIntervals.h  TestMenu.h  TestPlayback.h  TestPopupMenu.h  TestProjectView.h  TestRender.h  TestSavingAndLoading.h  TestScrolling.h  TestSplitting.h  TestStillImage.h  TestTimeline.h  TestTimelinesView.h  TestTransform.h  TestTransition.h  TestTrimming.h  TestUtilPath.h  TestWatch.h
test/auto/src/: TestAutoFolder.cpp  TestBugs.cpp  TestComposition.cpp  TestConvert.cpp  TestDetailsClip.cpp  TestDialog.cpp  TestDragAndDrop.cpp  TestExceptions.cpp  TestFileTypes.cpp  TestIntervals.cpp  TestMenu.cpp  TestPlayback.cpp  TestPopupMenu.cpp  TestProjectView.cpp  TestRender.cpp  TestSavingAndLoading.cpp  TestScrolling.cpp  TestSplitting.cpp  TestStillImage.cpp  TestTimeline.cpp  TestTimelinesView.cpp  TestTransform.cpp  TestTransition.cpp  TestTrimming.cpp  TestUtilList.cpp  TestUtilPath.cpp  TestWatch.cpp
test/filetypes_audio/: videoonly_imgp1066.avi
test/filetypes_formats_audio/: 02-Untitled(2).oma  24-bit_96kHz_RICE2_pop.flac  48kbps_st_44kHz_aac+_adts.aac  BBC_8BIT.VOC  Boys6-1.aiff  PulpFiction_requires_avcodec_flush_buffers_after_seek.mpc  REC05.act  Sound.Explode.caf  cat.cdxl  faad_infiniteloop.aacp  fart_2.qcp  large_superframe.wma  monsters_inc_2.0_192.ac3  musepack_sv8.mpc  odysse3d.vqf  sample.amr  sonateno14op27-2.aa3  streaming.wina.com-live.asx
test/filetypes_formats_audio_and_video/: 12-10_19-18-52_BBC HD_Wild China_slow_seek_due_to_avcodec_logging.ts  1sec-dv25.lxf  3gpp2_50k_mpeg4_amr-nb_o.3g2  3gpp_50k_h263_amr-nb_o.3gp  Canon_HFS21.MTS  audio_data_shorter_than_file_length.avi  bear3.smv  ffvorbis_crash.ogm  fps_sample1.dvr-ms  freetv_aac_latm.ts  md_ogg.ogm
test/filetypes_formats_video/: Paperweight.mv
test/filetypes_special/: 1_minute_black_video_only.avi  FileWithVideoStreamButNoVideoPackets.avi  long_black_10min.avi
test/filetypes_sync/: Audio_Video_Sync_Test_Calibration_23976fps.mov
test/filetypes_title/: title.tif
test/filetypes_video/: videoonly_encoded.m4v
test/include/: FixtureGui.h  FixtureLog.h  HelperProjectView.h  HelperTimeline.h  HelperWindow.h  IEventLoopListener.h  SuiteCreator.h  Test.h  TestAutoFolder.h  TestExample.h  TestProjectView.h  TestTimeline.h  TestTimelinesView.h  TestUtilList.h
test/manual/: CMakeLists.txt
test/manual/include/: TestManual.h
test/manual/src/: TestManual.cpp
test/once/: CMakeLists.txt
test/once/include/: TestOnce.h
test/once/src/: TestOnce.cpp
test/pch/include/: PrecompiledTest.h
test/pch/src/: PrecompiledTest.cpp
test/saved_projects/: 0.2.1_1296.vid  0.2.1_1297.vid  0.2.1_1304.vid  0.2.3_1316.vid  0.2.3_1319.vid  0.2.4_1322.vid  0.2.5_1378.vid  0.2.5_1381.vid  0.2.5_1384.vid  0.2.5_1393.vid  0.2.5_1403.vid  0.2.6_1434.vid  0.2.6_1450.vid  0.2.8_1583.vid  0.2.9_1590.vid  0.3.10_1826.vid  0.3.12_1853.vid  0.3.13_1910.vid  0.3.14_1914.vid  0.3.14_1939.vid  0.3.14_1967.vid  0.3.14_1974.vid  0.3.15_1999.vid  0.3.15_2001.vid  0.3.15_2009.vid  0.3.15_2021.vid  0.3.15_2034.vid  0.3.15_2050.vid  0.3.16_2064.vid  0.3.17_2148.vid  0.3.17_2149.vid  0.3.17_2154.vid  0.3.1_1313.vid  0.3.1_1613.vid  0.3.1_1634.vid  0.3.6_1737.vid  0.3.7_1782.vid  0.3.7_1787.vid  0.3.7_1793.vid  0.3.7_1804.vid  (+1 more)
test/src/: FixtureGui.cpp  FixtureLog.cpp  HelperProjectView.cpp  HelperTimeline.cpp  HelperWindow.cpp  Test.cpp  TestAutoFolder.cpp  TestExample.cpp  TestProjectView.cpp  TestTimeline.cpp  TestTimelinesView.cpp  TestUtilList.cpp
test/test/: CMakeLists.txt  CxxTestMacros.inc  TestMacros.inc
test/test/include/: FixtureApplication.h  FixtureConfig.h  FixtureGui.h  FixtureLog.h  FixtureProject.h  HelperApplication.h  HelperAudioChunk.h  HelperClipboard.h  HelperConfig.h  HelperDetails.h  HelperDrag.h  HelperFileSystem.h  HelperFiles.h  HelperHistory.h  HelperInput.h  HelperModel.h  HelperPlayback.h  HelperPopupMenu.h  HelperProject.h  HelperProjectView.h  HelperRender.h  HelperSequence.h  HelperTestSuite.h  HelperThread.h  HelperTimeline.h  HelperTimelineAssert.h  HelperTimelineDrag.h  HelperTimelineTrim.h  HelperTimelinesView.h  HelperTransform.h  HelperTransition.h  HelperVideoFrame.h  HelperWatcher.h  HelperWidgets.h  HelperWindow.h  HelperWorker.h  IEventLoopListener.h  SuiteCreator.h  Test.h
test/test/src/: FixtureApplication.cpp  FixtureConfig.cpp  FixtureGui.cpp  FixtureProject.cpp  HelperApplication.cpp  HelperAudioChunk.cpp  HelperClipboard.cpp  HelperConfig.cpp  HelperDetails.cpp  HelperDrag.cpp  HelperFileSystem.cpp  HelperFiles.cpp  HelperHistory.cpp  HelperInput.cpp  HelperModel.cpp  HelperPlayback.cpp  HelperPopupMenu.cpp  HelperProject.cpp  HelperProjectView.cpp  HelperRender.cpp  HelperSequence.cpp  HelperTestSuite.cpp  HelperThread.cpp  HelperTimeline.cpp  HelperTimelineAssert.cpp  HelperTimelineDrag.cpp  HelperTimelineTrim.cpp  HelperTimelinesView.cpp  HelperTransform.cpp  HelperTransition.cpp  HelperVideoFrame.cpp  HelperWatcher.cpp  HelperWidgets.cpp  HelperWindow.cpp  HelperWorker.cpp  SuiteCreator.cpp
test/testall/: CMakeLists.txt
test/testall/src/: testall.cpp
test/testauto/: CMakeLists.txt
test/testauto/include/: TestAudioKeyFrames.h  TestAuto.h  TestAutoFolder.h  TestBugs.h  TestBugsNoProject.h  TestClipSpeed.h  TestComposition.h  TestConvert.h  TestDetailsClip.h  TestDragAndDrop.h  (+22 more)
test/testfiletypes/: CMakeLists.txt
test/testrendering/: CMakeLists.txt
test/testsync/: CMakeLists.txt
test/testtransitions/: CMakeLists.txt
test/testui/: CMakeLists.txt
(+1114 files in other folders)
